# HPC_CUDA_OPTIMIZER

./: README.md  README_hpc_optimizer.txt  benchmark_baseline.json  benchmark_yml.txt  check_regression_py.txt  ci_yml.txt  ephemeral_runner.txt  hpc_optimizer_installer.txt  hpc_optimizer_manifest.json  runner_env.txt  runner_poller.txt  runner_poller.txt.bak2  setup_runner.txt  slurm_job_wrapper.txt  teardown_runner.txt
.github/workflows/: ci.yml
hpc_optimizer/: CMakeLists.txt  README.md
hpc_optimizer/.github/workflows/: benchmark.yml  ci.yml
hpc_optimizer/examples/: train_multigpu.cu  train_single.cu  train_zero2.cu  train_zero3_tp.cu
hpc_optimizer/include/: hpc_adam.cuh  hpc_checkpoint.cuh  hpc_comm.cuh  hpc_grad_clip.cuh  hpc_lamb.cuh  hpc_lion.cuh  hpc_lr_scheduler.cuh  hpc_optimizer.cuh  hpc_precision.cuh  hpc_profiler.cuh  hpc_sgd.cuh  hpc_tensor_parallel.cuh  hpc_types.h  hpc_zero2.cuh  hpc_zero2_optimizer.cuh  hpc_zero3.cuh
hpc_optimizer/scripts/: check_regression.py  setup_runner.sh  slurm_test.sh
hpc_optimizer/tests/: test_hpc_optimizers.cu  test_precision.cu  test_zero2.cu  test_zero3.cu
